--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 shotdetect (2015.09.13.01) unstable; urgency=low
 
   * Do not draw histograms, segfaults due to missing RGB values
+  * Do not include RGB values in the _video.xml file
 
  -- Matthias Hunstock <atze@fem.tu-ilmenau.de>  Sun, 13 Sep 2015 19:39:15 +0200
 
