--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+shotdetect (2015.09.30.01) unstable; urgency=high
+
+  * fix segfault on amd64 platform
+  * fix memleak
+
+ -- Matthias Hunstock <atze@fem.tu-ilmenau.de>  Wed, 30 Sep 2015 22:26:45 +0200
+
 shotdetect (2015.09.13.01) unstable; urgency=low
 
   * Do not draw histograms, segfaults due to missing RGB values
