--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+shotdetect (2015.10.01.01) unstable; urgency=low
+
+  * new detection algorithm, optimized on fades and similar
+  * new cmdline arguments
+  * fix libav* deprecation warnings
+
+ -- Matthias Hunstock <atze@fem.tu-ilmenau.de>  Thu, 01 Oct 2015 00:54:23 +0200
+
 shotdetect (2015.09.30.01) unstable; urgency=high
 
   * fix segfault on amd64 platform
