--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+shotdetect (2015.10.03.01) unstable; urgency=low
+
+  * fix XML result: first frame is "1", not "0"
+
+ -- Matthias Hunstock <atze@fem.tu-ilmenau.de>  Sat, 03 Oct 2015 21:01:45 +0200
+
 shotdetect (2015.10.01.01) unstable; urgency=low
 
   * new detection algorithm, optimized on fades and similar
