--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+shotdetect (2015.10.06.01) unstable; urgency=high
+
+  * BUGFIX: frame skipping did not work correctly
+
+ -- Matthias Hunstock <atze@fem.tu-ilmenau.de>  Tue, 06 Oct 2015 12:30:23 +0200
+
 shotdetect (2015.10.03.02) unstable; urgency=low
 
   * fix XML result: first frame is "1", not "0"
